# NumCppLib

./: .gitignore  CMakeLists.txt  README.md
examples/: example_approximation.cpp  example_differential_equations.cpp  example_integration.cpp  example_interpolation.cpp  example_linear_algebra.cpp  example_nonlinear_equations.cpp
include/: approximation.h  differential_equations.h  integration.h  interpolation.h  linear_algebra.h  nonlinear_equations.h
src/: approximation.cpp  differential_equations.cpp  integration.cpp  interpolation.cpp  linear_algebra.cpp  nonlinear_equations.cpp
tests/: run_tests.cpp  test_approximation.cpp  test_differential_equations.cpp  test_integration.cpp  test_interpolation.cpp  test_linear_algebra.cpp  test_nonlinear_equations.cpp
